clean code: Fixed formating and removed unused method.